# openai_playground

./: Cargo.toml
src/: error.rs  hello_functions_system_prompt.txt  main.rs
