[package]
name = "openai_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0.56"
async-openai = "0.18.3"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
